# arcticOS

./: CMakeLists.txt  README.md  TODO  build-all.sh  build-evt3.sh  build-evt4.sh  build-evt5.sh  setup-sdk.sh
LICENSES/: freertos  freertos-pico
docs/: screen_h
docs/api/: flash  graphics  keypad  screen  screen_h
docs/hardware/: flash  kernel  keypad  screen
docs/other/: Generating-Fonts
docs/troubleshooting/: PANIC messages
include/: FreeRTOSConfig.h  arcticOS.h
include/FreeRTOS/: FreeRTOS.h  StackMacros.h  croutine.h  deprecated_definitions.h  event_groups.h  message_buffer.h  portable.h  queue.h  semphr.h  task.h  timers.h
include/apps/launcher/: launcher.h
include/apps/settings/: settings.h
include/arcticOS/: build_settings.h  graphics.h  keyboard.h  math.h  menus.h  processes.h  screen.h
include/arcticOS/drivers/: cpu.h  flash.h  keyboard.h
include/arcticOS/graphics/: primitives.h  text.h  theme.h  ui.h
include/flash-layout/: flash-layout.h  settings.h
include/freeRTOS/: FreeRTOS.h  StackMacros.h  croutine.h  deprecated_definitions.h  event_groups.h  message_buffer.h  portable.h  queue.h  semphr.h  task.h  timers.h
include/hardware/: cellular.h  keypad.h
include/sdk/: syscall.h
include/strings/: en-CA.h
include/ui/: listmenu.h
scripts/: fontgen.py  temp.xbm
source/: arcticOS.c
source/arcticOS/: graphics.c  math.c
source/graphics/: schrift.c
source/hardware/: cpu.c  flash.c  keypad.c  screen.c
source/kernel/: debug.c  global.c  interrupts.c  multitasking.c  sleep.c  syscalls.c
source/ui/: listmenu.c
(+101 files in other folders)
